--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "dayjs": "^1.11.13",
+    "microcms-js-sdk": "^3.1.2",
+    "next": "^15.1.6",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "autoprefixer": "10.4.4",
@@ -22,7 +25,7 @@
     "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "0.1.8",
     "tailwindcss": "3.0.23",
-    "typescript": "4.5.4"
+    "typescript": "^5.7.3"
   },
   "postcss": {
     "plugins": {
